Picture alignments issues fixed and dark theme

--- a/css/style.css
+++ b/css/style.css
@@ -138,11 +138,10 @@
    font-size: 17px;
  }
 
- #chat-image-box {
-  width: 100%;
+ /* #chat-image-box {
+  align-items: start;
  }
 
  #chat-image-label {
-  width: 800px;
-  height: 800px;
- }
+  max-height: fit-content;
+ } */
